<resources>
    <string name="facebook_app_id">730277407082799</string>
    <string name="app_name">Antidote</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="term">By signing up, you agree to our</string>

    <string name="long_str">By signing up, you agree to our dsd sd sd sd ds d sd sd ad asd sad asd  dsa dsd ad sa das dsa dsa dsa dsa das dsa dsa das das  dsa ds ds dsd sad sd asd sa das dsa dsadn mnb mbn mn bm nbm nbm bnm nbm nb m bn mnb mbn mbn mbn m bnm bnm n h fgh fg h</string>

    <string name="nointernet">No internet, please check your connection.</string>

    <string name="blank_email">Please enter email.</string>
    <string name="blank_pass">Please enter password.</string>

    <string name="about1">As with all things, Antidote began as a little dream – a dream to change the world.</string>
    <string name="about2">Life in today’s modern society is often stressful, complicated, dusty, and toxic. Like most of our fellow city-dwellers, we used to be oblivious to how poisonous our own lifestyles were; we ate processed food and lots of other junk, stayed up late, worked too much, seldom exercised. Caught up in the momentum of our busy urban lives, we forgot how to be kind to our bodies and our minds.</string>
    <string name="about3">One day, we finally got sick and tired of always feeling so lumpy, lethargic and unhappy, and realised we needed to change. That led us to learning about real nutrition and experiencing for ourselves the overwhelmingly positive effects of living a healthier life. More specifically, we later discovered juicing and the importance of having our body take in enough micronutrients (for the uninitiated, micronutrients are essential nutrients that our body needs in order to function at an optimal level, and they are things like calcium, iron, magnesium, vitamin C, vitamin D and so on).</string>
    <string name="about4">The culmination of that journey of change is Antidote. We started Antidote because we strongly believe that it’s possible for everyone to live a healthier and happier life, and our juices are designed to help everyone take the crucial first step towards exactly that, by allowing your body to get easy access to the nutrients and antioxidants it sorely needs.</string>
    <string name="about5">But Antidote is more than just a juicing company. Our mission is to rise above the trends and fads of the health and fitness industry, and to impart real, practical nutritional knowledge through a series of interesting and carefully-designed programmes, all of them backed up by solid research in the nutritional field.</string>
    <string name="about6">We can’t wait for you to join us on this journey of self-transformation, but more importantly, we hope that you’ll have fun and enjoy yourself!</string>
</resources>
