<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rltLeft"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_white"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imvMenuLeft"
                android:layout_width="@dimen/ac_imv_size"
                android:layout_height="@dimen/ac_imv_size"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/imvMenuLeft"
                android:text="Back"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_15sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="About"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/about" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/about1"
                    android:textColor="@color/black_33"
                    android:textSize="@dimen/txt_15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/about2"
                    android:textColor="@color/black_33"
                    android:textSize="@dimen/txt_15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/about3"
                    android:textColor="@color/black_33"
                    android:textSize="@dimen/txt_15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/about4"
                    android:textColor="@color/black_33"
                    android:textSize="@dimen/txt_15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/about5"
                    android:textColor="@color/black_33"
                    android:textSize="@dimen/txt_15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/about6"
                    android:textColor="@color/black_33"
                    android:textSize="@dimen/txt_15sp" />
            </LinearLayout>
        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/line_shadow"></LinearLayout>
    </RelativeLayout>
</LinearLayout>